# uao_gestion_proyectos_ia_cd

./: README.md  pyproject.toml
data/processed/: dry_beans_pca.csv
data/raw/: dry_bean_data.csv
docs/: sprint-planning.md
notebooks/: 01_laboratorio_drybean.ipynb
src/: main.py
